--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,9 @@ compile_commands.json
 
 *_qmlcache.qrc
 gsv/weights/*
-gsv/tools/AP_BWE_main/24kto48k/*
+gsv/tools/AP_BWE_main/24kto48k/*gsv/weights/**
+gsv/tools/AP_BWE_main/24kto48k/g_24kto48k.zip
+*.ckpt
+*.pth
+*.safetensors
+*.zip
