added fading effect

--- a/luna/CMakeLists.txt
+++ b/luna/CMakeLists.txt
@@ -2,26 +2,47 @@ cmake_minimum_required(VERSION 3.22)
 project(LUNA LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Qt auto-magic
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC OFF)
 
-find_package(Qt6 REQUIRED COMPONENTS Widgets Gui)
+# ---- Qt packages ----
+# Add Network (for BackendClient) and Multimedia (for AudioPlayer)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Network Multimedia)
 
-# add to your sources list
+# ---- Sources ----
 add_executable(luna_sama
+  # app
   app/main.cpp
-  ui/MainWindow.cpp ui/MainWindow.h
-  ui/ModeMenu.cpp ui/ModeMenu.h
-  ui/CharacterView.cpp ui/CharacterView.h
-  ui/IOOverlay.cpp ui/IOOverlay.h
-  core/BackendClient.h
-  core/ModeManager.cpp core/ModeManager.h   # <--- NEW
+
+  # ui
+  ui/MainWindow.cpp         ui/MainWindow.h
+  ui/ModeMenu.cpp           ui/ModeMenu.h
+  ui/CharacterView.cpp      ui/CharacterView.h
+  ui/IOOverlay.cpp          ui/IOOverlay.h
+
+  # core
+  core/ModeManager.cpp      core/ModeManager.h
+  core/BackendClient.cpp    core/BackendClient.h
+  core/AudioPlayer.cpp      core/AudioPlayer.h
 )
 
+# On Windows, build as a GUI app (no console). Harmless elsewhere.
+if (WIN32)
+  set_target_properties(luna_sama PROPERTIES WIN32_EXECUTABLE YES)
+endif()
 
+# ---- Link Qt ----
 target_link_libraries(luna_sama
-  Qt6::Widgets Qt6::Gui
+  PRIVATE
+    Qt6::Core
+    Qt6::Gui
+    Qt6::Widgets
+    Qt6::Network
+    Qt6::Multimedia
 )
 
 # (Optional) copy style.qss next to the binary for easy running from IDEs
